Refactor ChatTranslatorHack to use virtual threads